Fix more button layout issues

--- a/src/css/modules/header.less
+++ b/src/css/modules/header.less
@@ -143,14 +143,6 @@
         position: fixed;
         left: 100%;
         right: 1em;
-        width: 55px;
-        height: 55px;
-        font-size: 2rem;
-        text-align: center;
-        margin: 0 auto;
-        padding: 0;
-        border-radius: @global-radius;
-        user-select: none;
         z-index: @z-index-5;
     }
 
@@ -183,5 +175,4 @@
             top: 0.5rem;
         }
     }
-
 }
